--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "nitropack": "^2.9.7"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241218.0"
+    "@cloudflare/workers-types": "^4.20241218.0",
+    "typescript": "^5.7.2",
+    "wrangler": "^3.95.0"
   }
 }
